[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://textures/menu/main menu background.png" type="Texture" id=2]
[ext_resource path="res://textures/menu/main menu endless hover.png" type="Texture" id=3]
[ext_resource path="res://textures/menu/main menu endless nothing.png" type="Texture" id=4]
[ext_resource path="res://textures/menu/main menu endless click.png" type="Texture" id=5]
[ext_resource path="res://textures/menu/main menu regular nothing.png" type="Texture" id=6]
[ext_resource path="res://textures/menu/main menu regular hover.png" type="Texture" id=7]
[ext_resource path="res://textures/menu/main menu regular click.png" type="Texture" id=8]
[ext_resource path="res://textures/menu/main menu cootsbox.png" type="Texture" id=9]
[ext_resource path="res://textures/menu/main menu keyboard.png" type="Texture" id=10]
[ext_resource path="res://textures/menu/main menu mouse.png" type="Texture" id=11]
[ext_resource path="res://fonts/tempDEBUGFONT.tres" type="DynamicFont" id=12]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Computer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 959, 540 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Computer:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Keyboard:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 959, 566 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Keyboard:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Mouse:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 980, 562 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Mouse:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Computer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 959, 540 ), Vector2( 959, 531 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Computer:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.46431 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Keyboard:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2, 7.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 959, 566 ), Vector2( 959, 550 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Keyboard:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2, 7.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Mouse:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1, 3.1, 4.9, 6.8 ),
"transitions": PoolRealArray( 0.68302, 0.757858, 0.707107, 0.707107 ),
"update": 0,
"values": [ Vector2( 980, 562 ), Vector2( 965, 577 ), Vector2( 966.75, 562.25 ), Vector2( 976.725, 555.175 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Mouse:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1, 3.1, 4.9, 6.8 ),
"transitions": PoolRealArray( 0.68302, 0.757858, 0.707107, 0.707107 ),
"update": 0,
"values": [ 0.0, 0.0, 0.56943, -0.268329 ]
}

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="Computer" type="Sprite" parent="."]
position = Vector2( 959, 540 )
texture = ExtResource( 9 )

[node name="Regular" type="TextureButton" parent="."]
margin_left = 51.0
margin_top = 61.0
margin_right = 451.0
margin_bottom = 291.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )

[node name="Endless" type="TextureButton" parent="."]
margin_left = 290.0
margin_top = 327.0
margin_right = 690.0
margin_bottom = 557.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 3 )

[node name="Keyboard" type="Sprite" parent="."]
position = Vector2( 959, 566 )
texture = ExtResource( 10 )

[node name="Mouse" type="Sprite" parent="."]
position = Vector2( 980, 562 )
texture = ExtResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/RESET = SubResource( 2 )
anims/default = SubResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 1722.0
margin_top = 988.0
margin_right = 2072.0
margin_bottom = 1130.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 12 )
text = "Settings"

[connection signal="pressed" from="Regular" to="." method="_on_Regular_pressed"]
[connection signal="pressed" from="Endless" to="." method="_on_Endless_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
